[gd_scene load_steps=14 format=3 uid="uid://lntsrumo4fv5"]

[ext_resource type="Script" uid="uid://b4eddnctfs6r4" path="res://scripts/life.gd" id="1_rliay"]
[ext_resource type="Texture2D" uid="uid://cwadcu777kp11" path="res://n_assets/Mini FX, Items & UI/Effects/Bright_Sparkle (16 x 16).png" id="2_tyh2n"]
[ext_resource type="Texture2D" uid="uid://bo6r0lkn1crtp" path="res://n_assets/n_scenes/elements/heartPulse.png" id="3_fs78b"]
[ext_resource type="AudioStream" uid="uid://cahm0vhcrht1o" path="res://sounds/coletables/lifeV1.ogg" id="4_tyh2n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v34kk"]
atlas = ExtResource("2_tyh2n")
region = Rect2(0, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcci3"]
atlas = ExtResource("2_tyh2n")
region = Rect2(20, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcds0"]
atlas = ExtResource("2_tyh2n")
region = Rect2(40, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_co5gy"]
atlas = ExtResource("2_tyh2n")
region = Rect2(60, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt8tl"]
atlas = ExtResource("3_fs78b")
region = Rect2(0, 0, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3tsr"]
atlas = ExtResource("3_fs78b")
region = Rect2(32, 0, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1b1c"]
atlas = ExtResource("3_fs78b")
region = Rect2(64, 0, 32, 29)

[sub_resource type="SpriteFrames" id="SpriteFrames_akjbj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v34kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcci3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcds0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co5gy")
}],
"loop": false,
"name": &"collect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt8tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3tsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1b1c")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2d2mm"]
size = Vector2(8, 6)

[node name="life" type="Node2D"]

[node name="life" type="Area2D" parent="."]
collision_layer = 512
script = ExtResource("1_rliay")

[node name="amination_life" type="AnimatedSprite2D" parent="life"]
scale = Vector2(0.41666666, 0.39999998)
sprite_frames = SubResource("SpriteFrames_akjbj")
animation = &"idle"
autoplay = "idle"
frame = 1
frame_progress = 0.4902145

[node name="CollisionShape2D" type="CollisionShape2D" parent="life"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_2d2mm")

[node name="audio" type="AudioStreamPlayer2D" parent="life"]
stream = ExtResource("4_tyh2n")

[connection signal="body_shape_entered" from="life" to="life" method="_on_body_shape_entered"]
[connection signal="animation_finished" from="life/amination_life" to="life" method="_on_amination_life_animation_finished"]
